# Assembled-Trading-AI

./: .cursorignore  .cursorrules  .env  .gitignore  000_UpgradeToPS7.ps1  000_seed_project.ps1.disabled  Backlog_Deep_Improvements_v24_3.csv  Backlog_Deep_Improvements_v24_3.docx  CURSOR_WORKSPACE_ANLEITUNG.md  DeepDive_Systemanalyse_v24_2.docx  KNOWN_ISSUES.md  Master_Tasklist_360_with_Priorities.csv  PROJECT_STATUS.txt  PROJEKT_STATUS.md  PreFlight_NewsWhitelist_Update_v24_3.docx  README.md  README_INTEGRATION.txt  README_ONECLICK.md  Reprioritization_All80_Sprint1-4_v24_3.csv  Reprioritization_All80_Sprint1-4_v24_3.docx  Roadmap_360_Sprints.docx  Systemanalyse_Korrekturen_v24_1.docx  Trading_System_Gesamtdokument_v24.docx  missing_symbols.txt  news_blacklist.yaml  news_whitelist.yaml  notes py.docx  pyproject.toml  pytest.ini  requirements.txt  run_all.ps1  run_all_sprint2.ps1  run_sprint2.ps1  sitecustomize.py  tmp_check.py  tmp_peek_ec.py  tmp_script.py  uninstaller für automatische ausführung sprint_5.txt  version.manifest.json  watchlist.txt
.cursor/commands/: 01pull.md  02resample.md  03execute.md  04backtest.md  05portfolio.md  06costgrid.md
.cursor/rules/: 01-backend-overview.md  02-backend-guidelines.md  rule1.mdc
.github/: heartbeat.txt
.github/ISSUE_TEMPLATE/: review_feedback.md
.github/workflows/: backend-ci.yml  ci.yml  nightly-runall.yml  nightly-sync.yml  repo-health.yml
config/: consumer_financial_misc.txt  consumer_financial_misc_tickers.txt  datasource.psd1  defense_security_aero.txt  defense_security_aero_tickers.txt  energy_resources_cyclicals.txt  energy_resources_cyclicals_tickers.txt  healthcare_biotech.txt  healthcare_biotech_tickers.txt  macro_world_etfs.txt  macro_world_etfs_tickers.txt  universe_ai_tech.txt  universe_ai_tech_tickers.txt  universe_name_to_ticker_mapping.md
config/factor_bundles/: ai_tech_core_alt_bundle.yaml  ai_tech_core_ml_bundle.yaml  ai_tech_ml_alpha_bundle.yaml  macro_world_etfs_core_bundle.yaml
configs/: batch_backtest_example_doc_schema.yaml
configs/batch_backtests/: cli_batch_test.yaml
configs/paper_track/: multifactor_long_short.yaml  multifactor_long_short_example.yaml  trend_baseline.yaml  trend_baseline_example.yaml
docs/: ADVANCED_ANALYTICS_FACTOR_LABS.md  ALT_DATA_CONTRACT.md  ALT_DATA_FACTORS_B1_DESIGN.md  ALT_DATA_FACTORS_B2_DESIGN.md  API_USAGE_ANALYSIS.md  ARCHITECTURE_BACKEND.md  ARCHITECTURE_LAYERING.md  ARCHITECTURE_REVIEW_SUMMARY.md  B3_COMPLETION_NOTES.md  BACKEND_MODULES.md  BACKEND_ROADMAP.md  BACKTEST_B1_UNIFIED_PIPELINE_DESIGN.md  BACKTEST_ENGINE_OPTIMIZATION_P3.md  BACKTEST_OPTIMIZATION_P3_DESIGN.md  BATCH_BACKTEST_P4_DESIGN.md  BATCH_RUNNER_P4.md  BATCH_RUNNER_P4_DESIGN.md  CLI_REFERENCE.md  CODE_QUALITY_AUDIT.md  CODE_QUALITY_FINAL_REPORT.md  CODE_QUALITY_FIXES_APPLIED.md  CODE_QUALITY_FIXES_SUMMARY.md  CODE_QUALITY_FULL_AUDIT.md  CODE_QUALITY_SUMMARY.md  CONFIG_STRICT_MODELS_REPORT.md  CONSISTENCY_CHECK.md  CONTRACTS.md  CORPORATE_ACTIONS.md  CURSOR_NEXT_10.md  D3_PANEL_STORE_DESIGN.md  DATA_DOWNLOAD_STATUS.md  DATA_PROVIDERS_COMPARISON.md  DATA_QUALITY_QC.md  DATA_SNAPSHOTS.md  DATA_SOURCES_BACKEND.md  DEFLATED_SHARPE_B4_DESIGN.md  DOWNLOAD_STATUS_REPORT.md  DOWNLOAD_STRATEGY.md  E2E_TEST_STABILIZATION.md  FACTOR_ANALYSIS_DATA_CONTRACT_ANALYSIS.md  (+87 more)
docs/cursor/: CONTEXT_PACK.md  RULES.md  TASKS.md
docs/models/: MODEL_CARD_TEMPLATE.md
experiments/20251203_172439_b818dd1b/: run.json
notebooks/: operator_overview_example.py
notes/: scratch.ps1  scratch.txt
research/: README.md
scripts/: 00_seed_demo_data.py  00_seed_demo_data.py.bak  31_assemble_intraday.ps1  31_assemble_intraday.ps1.bak  50_resample_intraday.ps1  50_resample_intraday.ps1.bak  51_qc_intraday_gaps.ps1  51_qc_intraday_gaps.ps1.bak  52_make_acceptance_intraday_sprint7.ps1  52_make_acceptance_intraday_sprint7.ps1.bak  DOWNLOAD_COMMANDS_OPTIMIZED.ps1  RUNALL_README.md  RUN_DOWNLOADS_ALL_UNIVERSES.ps1  batch_backtest.py  batch_runner.py  benchmark_backtest.py  benchmark_backtest_engine.py  check_all_universes_completeness.ps1  check_data_completeness.py  check_health.py  cli.py  cli_factor_report.py  compare_strategies_trend_vs_event.py  debug_event_signals.py  download_all_altdata_9h.ps1  download_all_universes.ps1  download_all_universes_batch.ps1  download_all_universes_robust.py  download_all_universes_safe.ps1  download_all_universes_twelve_data.ps1  download_all_universes_with_long_delays.ps1  download_altdata_finnhub_events.py  download_altdata_finnhub_news_macro.py  download_historical_snapshot.py  download_macro_etfs_conservative.ps1  download_missing_symbols_sequential.ps1  download_one_by_one_robust.ps1  download_one_by_one_safe.ps1  download_single_symbol.ps1  generate_performance_profile_report.py  (+56 more)
tests/: __init__.py  conftest.py  test_alt_data_contract.py  test_api_monitoring.py  test_api_oms.py  test_api_paper_trading.py  test_api_smoke.py  test_backtest_costs_default_on.py  test_backtest_determinism.py  test_backtest_factor_store.py  test_backtest_local_only_gate.py  test_backtest_no_feature_recompute.py  test_backtest_numba_equivalence.py  test_backtest_numba_fallback.py  test_backtest_portfolio_smoke.py  test_backtest_regression.py  test_backtest_vs_two_eod_cycles.py  test_batch_runner_config_validation.py  test_batch_runner_doc_schema_compat.py  test_batch_runner_parallel.py  test_batch_runner_resume.py  test_batch_runner_seeding.py  test_batch_runner_smoke.py  test_batch_runner_summary.py  test_benchmark_backtest.py  test_build_or_load_factors_cache_hit_miss.py  test_check_health_batch.py  test_check_health_paper_track_thresholds.py  test_cli.py  test_cli_analyze_factors.py  test_cli_batch_backtest.py  test_cli_batch_backtest_alias.py  test_cli_batch_backtest_integration.py  test_cli_check_health.py  test_cli_export_ml_alpha_factor.py  test_cli_ml_dataset.py  test_cli_ml_validation.py  test_cli_paper_track.py  test_cli_paper_track_catchup.py  test_cli_paper_track_list.py  (+176 more)
(+215 files in other folders)
