[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assembled-trading-core"
version = "0.0.1"
description = "Core backend for Assembled Trading AI - Data ingestion, signal generation, portfolio simulation, and order execution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.0.0",
  "pyarrow>=10.0.0",
  "fastparquet>=2023.1.0",
  "yfinance>=0.2.30",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
src = ["src", "scripts", "tests"]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E203"]
line-length = 88

[tool.ruff.isort]
known-first-party = ["assembled_core"]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
mypy_path = "src"
