[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assembled-trading-core"
version = "0.0.1"
description = "Core backend for Assembled Trading AI - Data ingestion, signal generation, portfolio simulation, and order execution"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Assembled Trading AI Team"}
]
license = {text = "Proprietary"}
keywords = ["trading", "backtesting", "portfolio", "quantitative-finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Runtime dependencies (from requirements.txt)
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=10.0.0",
    "fastparquet>=2023.1.0",
    "python-dateutil>=2.9.0",
    "requests>=2.32.0",
    "yfinance>=0.2.30",
    "pytz>=2025.2",
    "tzdata>=2025.2",
    "fsspec>=2025.9.0",
    "cramjam>=2.11.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.7.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
  "tomli>=2.0.0",  # For reading pyproject.toml in tests (Python < 3.11)
]

[project.scripts]
assembled-cli = "scripts.cli:main"
assembled-run-backtest = "scripts.run_backtest_strategy:main"
assembled-run-daily = "scripts.run_eod_pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
src = ["src", "scripts", "tests"]
line-length = 88

[tool.ruff.lint]
# Nur echte Fehler prüfen, keine Style-Warnungen
select = ["E", "F"]
ignore = ["E501", "E203", "E402"]  # E402: Module level import not at top (absichtlich in Tests nach sys.path.insert)

[tool.ruff.lint.isort]
known-first-party = ["assembled_core"]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
mypy_path = "src"
